fix alignment

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,10 +21,11 @@ tertiary                   tert              #99E2D0
  }
  
  body {
-     font-family: 'roboto';
+     font-family: 'Shrikhand';
  }
  
  header {
+     font-family: 'Roboto';
      display: flex;
      justify-content: center;
      padding: 20px;
@@ -32,6 +33,7 @@ tertiary                   tert              #99E2D0
  }
  
  footer {
+     font-family: 'Roboto';
      background-color: #353535;
      display: flex;
      align-items: center;
